se realizan los ultimos cambios

--- a/assets/Paginas/Folder.html
+++ b/assets/Paginas/Folder.html
@@ -21,6 +21,7 @@
 
 </div>
 
+<div class="contenedor_1">
 <section id="me">
 
     <h2>Sobre mi </h2>
@@ -96,6 +97,7 @@
     </div>
 </section>
 
+</div>
 
 </body>
 </html>
