se centra el folder

--- a/assets/Paginas/Folder.html
+++ b/assets/Paginas/Folder.html
@@ -8,97 +8,75 @@
     <title>Tu Página</title>
 
 </head>
-
 <body>
 
-<div class="navbar">
-    
-    <a href="#me">Sobre Mi</a>
-    <a href="#proyectos">Proyectos</a>
-    <a href="#habilidades">Habilidades</a>
-    <a href="#multimedia">Multimedia</a>   
-    <a href="#contacto">Contacto</a>
+    <div class="navbar">
+        <a href="#me">Sobre Mi</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#habilidades">Habilidades</a>
+        <a href="#multimedia">Multimedia</a>
+        <a href="#contacto">Contacto</a>
+    </div>
 
-</div>
+    <div class="contenedor_1">
+        <section id="me">
+            <h2>Sobre Mi</h2>
+            <p>Soy un estudiante de informática con pasión por el aprendizaje a la informática, mi deseo es poder hacer programas para ayudar a futuras generaciones a poder hacer proyectos mejores que los que realice durante mi gran proceso de aprendizaje y mis arduos caminos.uno de mis deseos es poder hacer una IA</p>
+        </section>
 
-<div class="contenedor_1">
-<section id="me">
+        <section id="proyectos">
+            <h2>Proyectos</h2>
+            <a href="../Imagenes/Portafolio_Img/1.png">
+                <img src="../Imagenes/Portafolio_Img/1.png" alt="Mi Proyecto 1">
+            </a>
+            <a href="../Imagenes/Portafolio_Img/2.png">
+                <img src="../Imagenes/Portafolio_Img/2.png" alt="Mi Proyecto 2">
+            </a>
+        </section>
 
-    <h2>Sobre mi </h2>
-    <p>soy un estudiante de informatica con ganas de aprender</p>
+        <section id="habilidades">
+            <h2>Habilidades</h2>
+            <a href="../Imagenes/Portafolio_Img/3.png">
+                <img src="../Imagenes/Portafolio_Img/3.png" alt="Habilidad 1" height="160" width="160">
+            </a>
+            <a href="../Imagenes/Portafolio_Img/4.jpg">
+                <img src="../Imagenes/Portafolio_Img/4.jpg" alt="Habilidad 2" height="160" width="160">
+            </a>
+            <a href="../Imagenes/Portafolio_Img/5.png">
+                <img src="../Imagenes/Portafolio_Img/5.png" alt="Habilidad 3" height="160" width="160">
+            </a>
+            <a href="../Imagenes/Portafolio_Img/6.png">
+                <img src="../Imagenes/Portafolio_Img/6.png" alt="Habilidad 4" height="160" width="160">
+            </a>
+        </section>
 
-</section>
+        <section id="multimedia">
+            <h2>Multimedia</h2>
+            <iframe width="560" height="560" src="https://www.youtube.com/embed/hwYTbujmukY" frameborder="0"
+                allowfullscreen></iframe>
+        </section>
 
-
-<section id="proyectos">
-    <h2>Proyectos</h2>
-    <br>
-
-    <a href="../Imagenes/Portafolio_Img/1.png">
-        <img src="../Imagenes/Portafolio_Img/1.png" alt="mio XD" height="250" width="500">
-    </a>
-
-    <a href="../Imagenes/Portafolio_Img/2.png">
-        <img src="../Imagenes/Portafolio_Img/2.png" alt="mio tambien xd" height="250" width="500">
-    </a>
-</section>
-
-<section id="habilidades">
-    <h2>Habilidades</h2>
-    
-    <a href="../Imagenes/Portafolio_Img/3.png">
-        <img src="../Imagenes/Portafolio_Img/3.png" alt="otro1" height="80" width="80">
-    </a>
-
-
-    <a href="../Imagenes/Portafolio_Img/4.jpg">
-        <img src="../Imagenes/Portafolio_Img/4.jpg" alt="otro2" height="80" width="80">
-    </a>
-
-
-    <a href="../Imagenes/Portafolio_Img/5.png">
-        <img src="../Imagenes/Portafolio_Img/5.png" alt="otro3" height="80" width="80">
-    </a>
-
-
-    <a href="../Imagenes/Portafolio_Img/6.png">
-        <img src="../Imagenes/Portafolio_Img/6.png" alt="otro4" height="80" width="80">
-    </a>
-
-</section>
-
-<section id="multimedia">
-    <h1>Multimedia</h1>
-   
-    <iframe width="560" height="315" src="https://youtu.be/hwYTbujmukY?si=OhzeKomHheywy0aG" frameborder="0" allowfullscreen></iframe>
-
-</section>
-
-<br>
-<br>
-
-<section id="contacto">
-    <h1>Contactanos</h1>
-
-    <div class="fondo-contacto pagina-contacto">
-        <div class="caja-contacto">
-            <div class="contacto">
-                <div class="contenido_formulario">
-                    <input type="text" name="nombre" placeholder="Nombre:">
-                    <input type="email" name="correo" placeholder="Correo:">
-                    <input type="text" name="celular" placeholder="Teléfono:">
-                    <textarea name="mensaje" id="" cols="10" rows="5" placeholder="Mensaje:"></textarea>
-                    <div>
-                        <input type="submit" class="button boton-claro contacto_active" value="ENVIAR">
+        <section id="contacto">
+            <h2>Contactanos</h2>
+            <div class="fondo-contacto pagina-contacto">
+                <div class="caja-contacto">
+                    <div class="contacto">
+                        <div class="contenido_formulario">
+                            <input type="text" name="nombre" placeholder="Nombre:">
+                            <input type="email" name="correo" placeholder="Correo:">
+                            <input type="text" name="celular" placeholder="Teléfono:">
+                            <textarea name="mensaje" cols="10" rows="5" placeholder="Mensaje:"></textarea>
+                            <div>
+                                <input type="submit" class="button boton-claro contacto_active" value="ENVIAR">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
-</section>
-
-</div>
 
 </body>
+
 </html>
 
