hice cambios en el README de develop y puse lo que cambie de la pagina oficial

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" aria-current="page" href="./assets/Paginas/Folder.html">Folder</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">Kinal</a>
+                    <a class="nav-link" href="./assets/Paginas/Kinal 1.html">Kinal</a>
                   </li>
                 </div>
             </div>
@@ -39,8 +39,8 @@
 
             <div class="row" id="sobre-mi">
                 <div class="col-lg-12 col-xs-12" data-aos="zoom-in-up">
-                  <h1>lo que me gusta si deseas ver las imagenes pasa el puntero por abajo</h1>
-          <p>Me gusta es la CocaCola tambien los videojuegos de Shotter o Estrategia entre algunos juegos de Shotter esta: call of duty mobile, left 4 dead 2, Couter Strike, half life,entre otros
+                  <h1>Lo que me gusta - Pasa el puntero por las imágenes</h1>
+                    <p>Me gusta es la CocaCola tambien los videojuegos de Shotter o Estrategia entre algunos juegos de Shotter esta: call of duty mobile, left 4 dead 2, Couter Strike, half life,entre otros
             entre los de Estrategia estan : lords mobile, tzared, war of king(guerra de reyes), ajedrez ,entre otros. tambien tengo gusto en otros tipos de generos juego mayormente en pc. a los juegos le dedico un tiempo
             especifico de 1hrs por dia. tambien tengo gusto por la musica de todo tipo de generos ya que hay tantos que le dedico la mayormente parte del dia en escuchar musica de otros generos que me pueden llamar la atencion.
         </p>
