--- a/assets/Paginas/Folder.html
+++ b/assets/Paginas/Folder.html
@@ -8,14 +8,14 @@
     <title>Tu Página</title>
 
 </head>
-<body>
-
+<body>    
     <div class="navbar">
         <a href="#me">Sobre Mi</a>
         <a href="#proyectos">Proyectos</a>
         <a href="#habilidades">Habilidades</a>
         <a href="#multimedia">Multimedia</a>
         <a href="#contacto">Contacto</a>
+        <a href="../../Index.html">Pagina Principal</a>
     </div>
 
     <div class="contenedor_1">
