--- a/assets/Paginas/Kinal 1.html
+++ b/assets/Paginas/Kinal 1.html
@@ -7,6 +7,7 @@
     <title>Kinal</title>
 </head>
 <body>
+    <a href="../../Index.html" class="boton-regresar">Regresar</a>
 
     <div id="slider">
         <h1>Bienvenido A Kinal El Trabajo Bien Hecho</h1>
@@ -83,7 +84,7 @@
 
     <div id="donaciones">
         <h2>Apoya Nuestra Causa</h2>
-        <p>Tu generosidad puede cambiar vidas. ¡Haz una donación hoy!</p>
+        <p>Cambia vidas el dia de hoy para hacer que kinal saque mejores estudiantes!</p>
         <button onclick="hacerDonacion()">Hacer Donación</button>
     </div>
 
